# diagramatic

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml
diagramatic/: __init__.py
diagramatic/cli/: main.py
diagramatic/core/: __init__.py  canvas_models.py  library.py  sizing.py  spatial.py  spatial_utils.py
diagramatic/export/: excalidraw.py
diagramatic/layout/: dagre.py  grid.py
diagramatic/render/: pipeline.py
diagramatic/validation/: __init__.py
examples/: video-streaming.yaml
