[project]
name = "diagramatic"
version = "0.1.0"
description = "Agent-friendly diagram toolkit — auto-layout, validation, and export for Excalidraw + JSON Canvas."
readme = "README.md"
license = "MIT"
authors = [
    { name = "rohan", email = "e4rohan@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "playwright==1.59.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
render = ["playwright>=1.40.0"]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.2",
    "playwright>=1.40.0",
]

[project.urls]
Homepage = "https://github.com/rororowyourboat/diagramatic"
Repository = "https://github.com/rororowyourboat/diagramatic"
Issues = "https://github.com/rororowyourboat/diagramatic/issues"

[project.scripts]
diagramatic = "diagramatic.cli.main:main"

[build-system]
requires = ["hatchling>=1.0.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["diagramatic"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.2",
    "playwright>=1.40.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []
